Finished first lesson

--- a/mdn_site/index.html
+++ b/mdn_site/index.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <link href="styles/style.css" rel="stylesheet" type="text/css">
     <title>Моя тестовая страница</title>
   </head>
   <body>
-    <img src="" alt="Моё тестовое изображение">
+    <h1>Learn something every day!</h1>
+    <img src="images/brain1.png" alt="Brain machine" />
+    <p>I'm going to learn at least one thing a day every day.</p>
+    <h1>Today I started to learn HTML basics and had learnt next things:</h1>
+    <ul>
+      <p>Basic HTML tegs</a></p>
+      <p>Basic CSS rules and selectors</p>
+      <p>Thing 3</p>
+    </ul>
+    <button>Change user</button>
+    <script src="scripts/main.js"></script>
   </body>
-</html> 
+</html>
